Improvements for Capstone

--- a/SchedulingSoftware/Properties/Resources.es.resx
+++ b/SchedulingSoftware/Properties/Resources.es.resx
@@ -331,7 +331,7 @@
     <value>Vista Semanal</value>
   </data>
   <data name="WindowTitle" xml:space="preserve">
-    <value>Programador Simple</value>
+    <value>Planificación Mathis</value>
   </data>
   <data name="YouHaveUpcomingAppointment" xml:space="preserve">
     <value>Tienes una cita próxima con</value>
