--- a/SchedulingSoftware/Properties/Resources.de.resx
+++ b/SchedulingSoftware/Properties/Resources.de.resx
@@ -118,225 +118,222 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="Active" xml:space="preserve">
-    <value>Active</value>
+    <value>Aktiv</value>
   </data>
   <data name="Address" xml:space="preserve">
-    <value>Address</value>
+    <value>Adresse</value>
   </data>
   <data name="AddressLine2" xml:space="preserve">
-    <value>Address Line 2</value>
+    <value>Adresszeile 2</value>
   </data>
   <data name="AllAppointments" xml:space="preserve">
-    <value>All Appointments</value>
+    <value>Alle Termine</value>
   </data>
   <data name="Appointment" xml:space="preserve">
-    <value>Appointment</value>
+    <value>Termin</value>
   </data>
   <data name="AppointmentID" xml:space="preserve">
-    <value>Appointment ID</value>
+    <value>Termin-ID</value>
   </data>
   <data name="AppointmentOutsideBusinessHours" xml:space="preserve">
-    <value>Appointment cannot be outside of business hours (9AM-5PM)</value>
+    <value>Der Termin kann nicht außerhalb der Geschäftszeiten (9.00 bis 17.00 Uhr) liegen.</value>
   </data>
   <data name="Appointments" xml:space="preserve">
-    <value>Appointments</value>
+    <value>Termine</value>
   </data>
   <data name="AppointmentTypes" xml:space="preserve">
-    <value>Appointment Types</value>
+    <value>Terminarten</value>
   </data>
   <data name="City" xml:space="preserve">
-    <value>City</value>
+    <value>Stadt</value>
   </data>
   <data name="ConfirmAction" xml:space="preserve">
-    <value>Confirm Action</value>
+    <value>Aktion bestätigen</value>
   </data>
   <data name="ConfirmDeleteAppointment" xml:space="preserve">
-    <value>Are you sure you want to delete this appointment?</value>
+    <value>Möchten Sie diesen Termin wirklich löschen?</value>
   </data>
   <data name="ConfirmDeleteCustomer" xml:space="preserve">
-    <value>Are you sure you want to delete this customer?</value>
+    <value>Möchten Sie diesen Kunden wirklich löschen?</value>
   </data>
   <data name="ConsultantHours" xml:space="preserve">
-    <value>Consultant Hours</value>
+    <value>Beraterzeiten</value>
   </data>
   <data name="ConsultantSchedules" xml:space="preserve">
-    <value>Consultant Schedules</value>
+    <value>Beraterpläne</value>
   </data>
   <data name="Contact" xml:space="preserve">
-    <value>Contact</value>
+    <value>Kontakt</value>
   </data>
   <data name="Count" xml:space="preserve">
-    <value>Count</value>
+    <value>Zählen</value>
   </data>
   <data name="Country" xml:space="preserve">
-    <value>Country</value>
+    <value>Land</value>
   </data>
   <data name="CreateAppointment" xml:space="preserve">
-    <value>Create Appointment</value>
+    <value>Termin erstellen</value>
   </data>
   <data name="CreateCustomer" xml:space="preserve">
-    <value>Create Customer</value>
+    <value>Kunde erstellen</value>
   </data>
   <data name="Customer" xml:space="preserve">
-    <value>Customer</value>
+    <value>Kunde</value>
   </data>
   <data name="CustomerActive" xml:space="preserve">
-    <value>Customer Active</value>
+    <value>Aktiver Kunde</value>
   </data>
   <data name="CustomerID" xml:space="preserve">
-    <value>Customer ID</value>
+    <value>Client-ID</value>
   </data>
   <data name="CustomerName" xml:space="preserve">
-    <value>Customer Name</value>
+    <value>Kundenname</value>
   </data>
   <data name="Customers" xml:space="preserve">
-    <value>Customers</value>
+    <value>Kunden</value>
   </data>
   <data name="DatabaseConnectionFailed" xml:space="preserve">
-    <value>Failed to connect to database</value>
+    <value>Konnte keine Verbindung zur Datenbank herstellen</value>
   </data>
   <data name="Date" xml:space="preserve">
-    <value>Date</value>
+    <value>Datum</value>
   </data>
   <data name="DeleteAppointment" xml:space="preserve">
-    <value>Delete Appointment</value>
+    <value>Termin löschen</value>
   </data>
   <data name="DeleteCustomer" xml:space="preserve">
-    <value>Delete Customer</value>
+    <value>Kunde löschen</value>
   </data>
   <data name="Description" xml:space="preserve">
-    <value>Description</value>
+    <value>Beschreibung</value>
   </data>
   <data name="EditAppointment" xml:space="preserve">
-    <value>Edit Appointment</value>
+    <value>Termin bearbeiten</value>
   </data>
   <data name="EditCustomer" xml:space="preserve">
-    <value>Edit Customer</value>
+    <value>Kunde bearbeiten</value>
   </data>
   <data name="End" xml:space="preserve">
-    <value>End</value>
-  </data>
-  <data name="Error" xml:space="preserve">
-    <value>Error</value>
+    <value>Ende</value>
   </data>
   <data name="ErrorInvalidAddress" xml:space="preserve">
-    <value>You must specify an address</value>
+    <value>Sie müssen eine Adresse angeben</value>
   </data>
   <data name="ErrorInvalidCity" xml:space="preserve">
-    <value>You must specify a city</value>
+    <value>Sie müssen eine Stadt angeben</value>
   </data>
   <data name="ErrorInvalidCountry" xml:space="preserve">
-    <value>You must specify a country</value>
+    <value>Sie müssen ein Land angeben</value>
   </data>
   <data name="ErrorInvalidName" xml:space="preserve">
-    <value>You must specify a name</value>
+    <value>Sie müssen einen Namen angeben</value>
   </data>
   <data name="ErrorInvalidPhone" xml:space="preserve">
-    <value>You must specify a phone number</value>
+    <value>Sie müssen eine Telefonnummer angeben</value>
   </data>
   <data name="ErrorInvalidPostalCode" xml:space="preserve">
-    <value>You must specify a postal code</value>
+    <value>Sie müssen eine Postleitzahl angeben</value>
   </data>
   <data name="FutureAppointments" xml:space="preserve">
-    <value>Future Appointments</value>
+    <value>Zukünftige Termine</value>
   </data>
   <data name="InvalidEndDate" xml:space="preserve">
-    <value>Invalid end date</value>
+    <value>Ungültiges Enddatum</value>
   </data>
   <data name="InvalidEndTime" xml:space="preserve">
-    <value>Invalid end time</value>
+    <value>Ungültige Endzeit</value>
   </data>
   <data name="InvalidStartDate" xml:space="preserve">
-    <value>Invalid start date</value>
+    <value>Ungültiges Startdatum</value>
   </data>
   <data name="InvalidStartTime" xml:space="preserve">
-    <value>Invalid start time</value>
+    <value>Ungültige Startzeit</value>
   </data>
   <data name="Location" xml:space="preserve">
-    <value>Location</value>
+    <value>Standort</value>
   </data>
   <data name="Login" xml:space="preserve">
-    <value>Login</value>
+    <value>Zugriff</value>
   </data>
   <data name="LoginIncorrect" xml:space="preserve">
-    <value>Username or password incorrect</value>
+    <value>Falscher Benutzername oder falsches Passwort</value>
   </data>
   <data name="LoginSubtitle" xml:space="preserve">
-    <value>Please login to continue</value>
+    <value>Bitte melden Sie sich an, um fortzufahren</value>
   </data>
   <data name="Month" xml:space="preserve">
-    <value>Month</value>
+    <value>Monat</value>
   </data>
   <data name="MonthlyView" xml:space="preserve">
-    <value>Monthly View</value>
+    <value>Monatsansicht</value>
   </data>
   <data name="Name" xml:space="preserve">
     <value>Name</value>
   </data>
   <data name="NewAppointment" xml:space="preserve">
-    <value>New Appointment</value>
+    <value>Neuer Termin</value>
   </data>
   <data name="NewCustomer" xml:space="preserve">
-    <value>New Customer</value>
+    <value>Neuer Kunde</value>
   </data>
   <data name="OverlappingAppointment" xml:space="preserve">
-    <value>You already have an appointment within this timeframe</value>
+    <value>Sie haben bereits einen Termin in diesem Zeitraum</value>
   </data>
   <data name="Password" xml:space="preserve">
-    <value>Password</value>
+    <value>Passwort</value>
   </data>
   <data name="Phone" xml:space="preserve">
-    <value>Phone</value>
+    <value>Telefon</value>
   </data>
   <data name="PostalCode" xml:space="preserve">
-    <value>Postal Code</value>
+    <value>Postleitzahl</value>
   </data>
   <data name="Print" xml:space="preserve">
-    <value>Print</value>
+    <value>Drucken</value>
   </data>
   <data name="Report" xml:space="preserve">
-    <value>Report</value>
+    <value>Bericht</value>
   </data>
   <data name="Reports" xml:space="preserve">
-    <value>Reports</value>
+    <value>Berichte</value>
   </data>
   <data name="SelectAppointment" xml:space="preserve">
-    <value>Please select an appointment</value>
+    <value>Bitte wählen Sie einen Termin aus</value>
   </data>
   <data name="SelectCustomer" xml:space="preserve">
-    <value>Please select a customer</value>
+    <value>Bitte wählen Sie einen Kunden aus</value>
   </data>
   <data name="SelectDate" xml:space="preserve">
-    <value>Select Date</value>
+    <value>Datum auswählen</value>
   </data>
   <data name="SpecifyAppointmentType" xml:space="preserve">
-    <value>Please specify the appointment type</value>
+    <value>Bitte Art des Zitats angeben</value>
   </data>
   <data name="Start" xml:space="preserve">
-    <value>Start</value>
+    <value>Anfang</value>
   </data>
   <data name="StartingAt" xml:space="preserve">
-    <value>starting at</value>
+    <value>Beginnt um</value>
   </data>
   <data name="Title" xml:space="preserve">
-    <value>Title</value>
+    <value>Titel</value>
   </data>
   <data name="Type" xml:space="preserve">
-    <value>Type</value>
+    <value>Typ</value>
   </data>
   <data name="UpcomingAppointment" xml:space="preserve">
-    <value>Upcoming Appointment</value>
+    <value>Nächster Termin</value>
   </data>
   <data name="Username" xml:space="preserve">
-    <value>Username</value>
+    <value>Nutzername</value>
   </data>
   <data name="WeeklyView" xml:space="preserve">
-    <value>Weekly View</value>
+    <value>Wochenansicht</value>
   </data>
   <data name="WindowTitle" xml:space="preserve">
-    <value>Mathis Scheduling</value>
+    <value>Mathis Terminplanung</value>
   </data>
   <data name="YouHaveUpcomingAppointment" xml:space="preserve">
-    <value>You have an upcoming appointment with</value>
+    <value>Sie haben einen bevorstehenden Termin mit</value>
   </data>
 </root>
